<resources>
    <string name="app_name">Task Manager</string>
    <string name="todo_tab_name">TODO</string>
    <string name="finished_tab_name">Finished</string>
    <string name="failed_tab_name">Failed</string>
    <string name="open_task_creation_button_content_description">Opens task creation screen</string>
    <string name="open_quotes_button_content_description">Opens the inspirational quotes screen</string>
    <string name="go_back_image_button_content_description">Returns back to task lists</string>
    <string name="save_task_button">Save</string>
    <string name="task_title_edit_text_hint">Enter task title</string>
    <string name="missing_task_title_message">The task must have a title!</string>
    <string name="task_description_edit_text_hint">Task description</string>
    <string name="clock_icon_content_description">Sets expiry date on task</string>
    <string name="task_expiry_date_text_view_default">No expiry date</string>
    <string name="incorrectly_set_task_expiry_date_message">The task expiry date should not be set before the current date!</string>
    <string name="task_completed_on_text_view_beginning">Finished at&#160;</string>
    <string name="remove_task_expiry_date_button_content_description">Removes expiry date from task</string>
    <string name="task_save_success_message">Task saved successfully</string>
    <string name="task_title_placeholder">Title</string>
    <string name="task_expires_on_placeholder">xx-xx-xxxx</string>
    <string name="task_complete_button_content_description">Marks the task as completed</string>
    <string name="task_undo_completion_button_content_description">Marks the task as incomplete</string>
    <string name="task_delete_button_content_description">Deletes the task</string>
    <string name="task_delete_confirmation_title">Confirm delete</string>
    <string name="task_delete_confirmation_message">"Are you sure you want to delete this task?"</string>
    <string name="task_delete_success_message">Task deleted</string>
    <string name="task_complete_success_message">Task completed</string>
    <string name="task_undo_completion_success_message">Task marked as incomplete</string>
    <string name="delete_alert_positive">Confirm</string>
    <string name="tasks_load_failure_message">Failed to load tasks</string>
    <string name="zenquotes_credits">Inspirational quotes provided by</string>
    <string name="zenquotes_placeholder">ZenQuotes API</string>
    <string name="zenquotes_link"><![CDATA[<a href="https://zenquotes.io/" target="_blank">ZenQuotes API</a>]]></string>
    <string name="zenquotes_url">https://zenquotes.io</string>
    <string name="api_exception_message">There was a problem while fetching a quote. Please try again later.</string>
    <string name="quote_text_view_placeholder">I am the inspirational quote</string>
    <string name="get_quote_button">Inspire me</string>
    <string name="get_quote_button_content_description">Gets inspirational quote for the user</string>
</resources>